# Matrix2

./: .pre-commit-config.yaml  5.xlsx  AGENTS.md  CHANGELOG.md  DEVELOPER_GUIDE.md  PROJECT_COMPLETION_CHECKLIST.md  Policy-Eligibility-Matrix-v1.0.3.md  README-Eligibility-Matrix-Builder.md  README.md  debug_array_error.py  policy.yaml  policy_sample.yaml  pyproject.toml  pytest.ini  requirements.txt  run_gui.py  سند حقیقت (SSoT) نسخهٔ 1.0.2 — موتور ساخت «ماتریس احراز صلاحیت» (Eligibility Matrix).md  📘 Rebuild Blueprint — نسخه ادغامی نهایی (PythonPySide6, Policy-First).md
app/: main.py
app/core/: counter.py  (+9 more)
config/: SmartAlloc_Exporter_Config_v1.json  dashboard_texts.json  logging.yaml  policy.json
docs/: 0918.xlsx  Book1.xlsx  CENTER_MANAGEMENT_GUIDE.md  IMPLEMENTATION_STATUS_history_binding_governance.md  ImportToSabt1404_Sheet2_columns.md  InspactorReport-1404_08_27-3570 (1).xlsx  Phase_0_System_Requirements_v2.5_Final.md  README.md  Report (4).xlsx  SchoolReport-1404_08_27-3570 (1).xlsx  SmartAlloc_Dev_QA_Notes.md  SmartAlloc_E2E_QA_Checklist.fa.md  SmartAlloc_GUI_Operator_Guide.fa.md  System_Architecture_Blueprint_Smart_Student_Allocation_v1.0.md  System_Vision_Scope_Smart_Student_Allocation_v1.0.md  rule_engine_evaluation_plan.md  sqlite_cache_opportunities.md  theme-debug-report.md  vazir-font-pipeline.md  windows-ui-guide.md  سند مادر هسته سیستم تخصیص دانش‌آموزان - نسخه 2.0.md
policy/: policy.json  policy_schema.json
scripts/: compare_excel_structure.py
tests/: conftest.py  test_allocation_system.py  test_columns_normalization.py  test_int_parsing.py  (+1 more)
(+279 files in other folders)
