[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
(
  ^venv/
| ^\.venv/
| ^build/
| ^dist/
| ^\.git/
| ^legacy/
| ^experiments/
)
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "venv",
  ".venv",
  "build",
  "dist",
  ".git",
  "legacy",
  "experiments",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "SIM"]
ignore = ["E501", "D"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
